--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			  	<h1 class="text-uppercase"><strong>The Largest Tortilla Event Ever</strong></h1>
 			  </header>
 			  	<div>
-			  		<h2>Subscribe for the lastest and greatest Tortilla News. Sign up now for a chance to win a once in a lifetime opportunity to attend the 2020 TortillaCon. This legendary event will have hundreds of world renowned Tortilla crafters and artists. Hosted by TortillaTown and the creators behind the hit movie "Tortillas in Space" this is not an event you do not want to miss.</h2>
+			  		<h2>Subscribe for the lastest and greatest Tortilla News. Sign up now for a chance to win a once in a lifetime opportunity to attend the 2020 TortillaCon. This legendary event will have hundreds of world renowned Tortilla crafters and artists. Hosted by TortillaTown and the creators behind the hit movie "Tortillas in Space" this is not an event you want to miss.</h2>
 			  	<hr>
 			  	</div>
 			  	<div class="buffer col-12">
